<resources>
    <string name="app_name">Lat2_AKB2_10116051_MuhamadRizkyFauzan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="doesn_t_have_account_register">doesn\'t have account ? <b>Register</b></string>
    <string name="register">Register</string>
    <string name="arrowback">arrowback</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bloodtype">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="retypepassword">Retype Password</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="homeaddress">Home Address</string>
    <string name="defaultlocation">Default Location</string>
    <string name="agree_with_terms_and_conditions">Agree with Terms and Conditions</string>
    <string name="personal">Personal</string>
    <string name="desc_almost">Thank you for registering with us. One more\nstep, you need to check your email\nto active your account</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="almost_there">Almost There</string>
    <string name="verify">Verify</string>
    <string name="desc_verify">We have send verification code to your email</string>
    <string name="enter_verification_code_here">Enter Verification Code Here</string>
    <string name="send">send</string>
    <string name="doesn_t_get_the_code_resend">doesn\'t get the code? <b>Resend</b></string>
    <string name="muhamad_rizky_fauzan">Muhamad Rizky Fauzan</string>
    <string name="blood_type_b">Blood Type : B</string>
    <string name="connect_with_facebook">connect with facebook</string>
    <string name="or">OR</string>
    <string name="login">login</string>
    <string name="_75">75</string>
    <string name="_100">100</string>
    <string name="_330">330</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="search_donor_near_you">Search donor near you</string>
    <string name="_4_user_need_blood">4 User need blood</string>
    <string name="message">Message</string>
    <string name="_5_new_messages">5 New Messages</string>
    <string name="_5_gives_2_received">5 Gives, 2 Received</string>
    <string name="donor_history">Donor History</string>
</resources>
