<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_header"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backarrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/arrowback"
                android:src="@drawable/ic_header_back" />

            <TextView
                android:id="@+id/textRegisterRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:paddingBottom="20dp"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterUsername"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterPhonnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterEmail"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdbRegisterMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterPhonnumber"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/light_blue"
            android:checked="true"
            android:paddingLeft="20dp"
            android:text="@string/male"
            android:textColor="@color/font_desc" />

        <RadioButton
            android:id="@+id/rdbRegisterFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterPhonnumber"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/female"
            android:textColor="@color/font_desc" />

        <EditText
            android:id="@+id/drbRegisterBlood"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rdbRegisterMale"
            android:layout_marginLeft="30dp"
            android:drawableEnd="@drawable/ic_arrow_dropdown"
            android:hint="@string/bloodtype"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/drbRegistereshus"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdbRegisterMale"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_arrow_dropdown"
            android:text="@string/reshus"
            android:layout_marginTop="10dp"
            android:textColor="@color/font_desc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/drbRegisterBlood"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterRepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:hint="@string/retypepassword"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdbReisterPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterRepassword"
            android:layout_marginLeft="50dp"
            android:paddingLeft="15dp"
            android:text="@string/personal"
            android:buttonTint="@color/light_blue"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/font_desc" />

        <RadioButton
            android:id="@+id/rdbRegisterOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterRepassword"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/organization"
            android:textColor="@color/font_desc" />

        <EditText
            android:id="@+id/drbRegisterJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdbRegisterOrganization"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_arrow_dropdown"
            android:hint="@string/job"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterHomeaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drbRegisterJob"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:hint="@string/homeaddress"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtRegisterLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterHomeaddress"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/font_desc"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:hint="@string/defaultlocation"
            android:inputType="text"
            android:textColor="@color/font_desc"
            android:textColorHint="@color/font_desc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/chkRegisterAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegisterLocation"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingRight="70dp"
            android:text="@string/agree_with_terms_and_conditions"
            android:drawableLeft="@drawable/ic_register_terms_on"
            android:textColor="@color/font_desc" />

        <Button
            android:id="@+id/btnRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/chkRegisterAgree"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_stylewhite"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            android:textColor="@color/light_blue" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>