<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relUserHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/ic_header_profile">

            <ImageView
                android:id="@+id/imgUserSidemenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_side_menu" />

            <ImageView
                android:id="@+id/imgUserNotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_notification" />
        </RelativeLayout>

        <View
            android:id="@+id/UserSeparatormenu"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/relUserHeader"
            android:background="@color/separator" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            app:civ_border_color="@color/background"
            app:civ_fill_color="@color/background_invite_friend"
            app:civ_border_width="4dp"
            app:civ_border_overlay="true"
            android:src="@drawable/userpic"/>

        <TextView
            android:id="@+id/txtUserNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUserProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/muhamad_rizky_fauzan"
            android:textColor="@color/light_blue"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtUserBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserNama"
            android:layout_centerHorizontal="true"
            android:text="@string/blood_type_b"
            android:textSize="19sp"/>

        <View
            android:id="@+id/UserSeparatormenu2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txtUserBlood"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <TextView
            android:id="@+id/txtUserBloodgive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserBlood"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/_75"
            android:textColor="@color/light_blue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtUserBloodreceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserBlood"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/_100"
            android:textColor="@color/light_blue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtUserBloodthanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserBlood"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:text="@string/_330"
            android:textColor="@color/light_blue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtUserBloodgivedesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUserBloodgive"
            android:layout_marginStart="45dp"
            android:text="@string/blood_give"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtUserBloodreceiveddesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserBloodreceived"
            android:layout_centerHorizontal="true"
            android:text="@string/blood_received"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtUserBloodthanksdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserBloodthanks"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:text="@string/thanks"
            android:textSize="10sp" />

        <View
            android:id="@+id/UserSeparatormenu3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txtUserBloodreceiveddesc"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@color/separator" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/UserSeparatormenu3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgUserSearchd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_search_donor" />

                    <ImageView
                        android:id="@+id/imgUserBneeded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_blood_needed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtUserSearchd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_donor"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txtUserNeededb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/blood_needed"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtUserSearchddesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_donor_near_you"
                        android:textAlignment="center"
                        android:textColor="#59595B"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtUserNeededbdesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_4_user_need_blood"
                        android:textAlignment="center"
                        android:textColor="#59595B"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgUserMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_message" />

                    <ImageView
                        android:id="@+id/HomeImgHistoryActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_donor_history" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/imgUserMessaged"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/message"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/HomeImgHistoryActivityd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/donor_history"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/imgUserMessageddesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_5_new_messages"
                        android:textAlignment="center"
                        android:textColor="#59595B"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/HomeImgHistoryActivityddesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_5_gives_2_received"
                        android:textAlignment="center"
                        android:textColor="#59595B"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>