<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostthereActivity"
    android:background="@color/light_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAlmostAlmost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almost_there"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:textColor="@color/background"/>

        <TextView
            android:id="@+id/txtAlmostDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_below="@id/txtAlmostAlmost"
            android:layout_centerHorizontal="true"
            android:textColor="@color/background"
            android:text="@string/desc_almost"/>

        <Button
            android:id="@+id/btnAlmostVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAlmostDesc"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_styleblue"
            android:text="@string/verify"
            android:textColor="@color/background" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>